handlers - queue list, queue info
